Fix layout overflow
Added display flex. Because the body did not have any layout properties
assigned, some children are not contained within it and may overflow.

--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,10 @@
   font-family: Lato;
 }
 
+body {
+  display: flex;
+}
+
 #root {
   width: 100vw;
   min-height: 100vh;
